CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)

PROJECT(lua-protobuf)

SET(SOURCE_FILE pb.c)

SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Set debug library postfix" FORCE)
SET(CMAKE_RELEASE_POSTFIX "" CACHE STRING "Set release library postfix" FORCE)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCE_FILE} )

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:include>
        )

INSTALL(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}_export
        RUNTIME DESTINATION bin
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        INCLUDES DESTINATION include
        )

INSTALL(EXPORT ${PROJECT_NAME}_export
        FILE ${PROJECT_NAME}Config.cmake
        DESTINATION lib/cmake/${PROJECT_NAME}
        )

INSTALL(FILES
        pb.h
        DESTINATION include/lua-protobuf
        )